# cclassrepo

CPPWeek201/: CPPWeek201.vcxproj
CPPWeek201/Debug/: CPPWeek201.ilk  vc142.idb
CPPWeek201/Debug/CPPWeek201.tlog/: link.read.1.tlog
CPPWeek202/: stars.cpp
CPPWeek202/Debug/: CPPWeek202.ilk  vc142.idb
CPPWeek202/Debug/CPPWeek202.tlog/: CL.command.1.tlog
Final/Final/: Final.sln  Final.vcxproj  Final.vcxproj.filters  November.cpp
Final/Final/Debug/: Final.ilk  Final.vcxproj.FileListAbsolute.txt  vc142.idb
Help Others/Quad Formula/Quad Formula/: Quad Formula.sln  Quad Formula.vcxproj  calc.cpp
Homework/Example/: Exercise 1 Week 2 Report.docx
Homework/Example/Week 2 Excerise/: Week 2 Excerise.sln  Week 2 Excerise.vcxproj  Week 2 Excerise.vcxproj.filters  numadd.cpp
Homework/Final Project/Final Project/: Final Project.sln  Final Project.vcxproj  Final Project.vcxproj.filters  guessgame.cpp
Homework/Week 10/Question10.1/: Question10.1.sln  Question10.1.vcxproj  Question10.1.vcxproj.filters  integersep.cpp
Homework/Week 10/Question10.2/: Question10.2.sln  Question10.2.vcxproj  Question10.2.vcxproj.filters  isperfect.cpp
Homework/Week 10/Question10.3/: Question10.3.sln  Question10.3.vcxproj  Question10.3.vcxproj.filters  greatestcommon.cpp
Homework/Week 10/Question10.4/: Question10.4.sln  (+3 more)
Homework/Week 5/Question5.1/: CMakeLists.txt  Question5.1.sln  Question5.1.vcxproj  main.cpp
Homework/Week 5/Question5.1/Debug/: Question5.1.ilk  vc142.idb
Homework/Week 5/Question5.1/Debug/Question5.1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Question5.1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
In Class/CPPWeek201/: CPPWeek201.sln  helloworld.cpp
In Class/CPPWeek301/: CPPWeek301.sln  CPPWeek301.vcxproj  CPPWeek301.vcxproj.filters  intadd.cpp
In Class/Week 4/: Week 4.sln  Week 4.vcxproj  Week 4.vcxproj.filters  classwork.cpp
Template/: CMakeLists.txt  Template.sln  Template.vcxproj
Template/Debug/Template.tlog/: CL.read.1.tlog  link.read.1.tlog  link.write.1.tlog
Template/Template/: Template.cpp
Template/Template/Debug/: Template.ilk  vc142.idb
Template/Template/Debug/Template.tlog/: CL.command.1.tlog  CL.write.1.tlog  Template.lastbuildstate  link.command.1.tlog
(+547 files in other folders)
