cmake_minimum_required(VERSION 3.15)
project(Template)

set(CMAKE_CXX_STANDARD 14)

add_executable(Template
        Template/.vs/Template/v16/ipch/AutoPCH/4134660edce629e0/TEMPLATE.ipch
        Template/.vs/Template/v16/.suo
        Template/.vs/Template/v16/Browse.VC.db
        Template/Debug/Template.tlog/CL.command.1.tlog
        Template/Debug/Template.tlog/CL.read.1.tlog
        Template/Debug/Template.tlog/CL.write.1.tlog
        Template/Debug/Template.tlog/link.command.1.tlog
        Template/Debug/Template.tlog/link.read.1.tlog
        Template/Debug/Template.tlog/link.write.1.tlog
        Template/Debug/Template.tlog/Template.lastbuildstate
        Template/Debug/Template.exe
        Template/Debug/Template.ilk
        Template/Debug/Template.log
        Template/Debug/Template.obj
        Template/Debug/Template.pdb
        Template/Debug/vc142.idb
        Template/Debug/vc142.pdb
        Template/Template.cpp
        Template/Template.sln
        Template/Template.vcxproj
        Template/Template.vcxproj.filters
        Template/Template.vcxproj.user)
